# esp-idf-components

./: .gitmodules  CMakeLists.txt  README.md
bluetooth/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
bluetooth-scanner/: CMakeLists.txt  Kconfig  idf_component.yml
bluetooth-scanner/src/bluetooth/: BTConfig.cpp  BTConfig.h  BTGapDiscovery.cpp  BTGapDiscovery.h  BTHidScanner.cpp  BTHidScanner.h  (+8 more)
bluetooth/src/beacon/: Beacon.cpp  Beacon.h
bluetooth/src/bluetooth/: BTConfig.cpp  BTConfig.h  BTGapDiscovery.h  BTHidCodes.h  BTHidDevice.cpp  BTHidDevice.h  BTManager.cpp  BTManager.h  BTSPPDevice.cpp  BTSPPDevice.h  BTSPPScanner.h  BTUtils.cpp  BTUtils.h  BleDiscovery.cpp  BleDiscovery.h
components-cpp/extra-services/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
components-cpp/extra-services/src/: ExtraComponentConfig.h
components-cpp/extra-services/src/sntp/: SNTPService.cpp  SNTPService.h
components-cpp/led-strip-service/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
components/mp3/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
core-esp32/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
core-esp32/src/core/: Application.h  Core.h  EventBus.cpp  EventBus.h  KalmanFilter.h  Logger.h  MessageBus.h  Properties.cpp  Properties.h  Queue.h  Registry.h  StateMachine.h  Task.cpp  Task.h  Timer.cpp  Timer.h
core-esp32/src/core/detail/: NonCopyable.h
core-esp32/src/core/system/: System.h  SystemEvent.h  SystemProperties.h  SystemService.h
core-esp32/src/core/system/console/: Console.cpp  Console.h
core-esp32/src/core/system/exchange/: Exchange.cpp  Exchange.h  UartExchange.cpp  UartExchange.h  ZeroMQ.cpp  ZeroMQ.h
core-esp32/src/core/system/exchange/i2c/: I2cDevice.cpp  I2cDevice.h  I2cExchange.cpp  I2cExchange.h  I2cMasterDevice.cpp  I2cMasterDevice.h  I2cSlaveDevice.cpp  I2cSlaveDevice.h
core-esp32/src/core/system/exchange/spi/: SpiDevice.cpp  SpiDevice.h  SpiExchange.cpp  SpiExchange.h  SpiMasterDevice.cpp  SpiMasterDevice.h  SpiSlaveDevice.cpp  SpiSlaveDevice.h
core-esp32/src/core/system/exchange/uart/: UartDevice.cpp  UartDevice.h  UartExchange.cpp  UartExchange.h
core-esp32/src/core/system/mqtt/: AlibabaIotCredentials.cpp  AlibabaIotCredentials.h  MqttBrokersList.cpp  MqttBrokersList.h  MqttProperties.cpp  MqttProperties.h  MqttService.cpp  MqttService.h
core-esp32/src/core/system/ota/: OtaService.cpp  OtaService.h
core-esp32/src/core/system/storage/: NvsStorage.cpp  NvsStorage.h
core-esp32/src/core/system/telemetry/: TelemetryService.cpp  TelemetryService.h
core-esp32/src/core/system/wifi/: WifiProperties.cpp  WifiProperties.h  WifiService.cpp  WifiService.h
core-esp32/src/core/v2/: FreeRTOSCpp.cpp  FreeRTOSCpp.h
core-esp32/test_apps/: CMakeLists.txt  pytest_core-esp32_ut.py
core-esp32/test_apps/main/: CMakeLists.txt  Kconfig.projbuild  test_core_esp32.cpp  test_event_bus.cpp  test_event_bus.h
examples/: README.md
examples/simple_application/: .gitignore  CMakeLists.txt  sdkconfig
exchange/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
exchange/src/exchange/: ComponentConfig.h  Exchange.cpp  Exchange.h
exchange/src/exchange/espnow/: EspNowDevice.cpp  EspNowDevice.h  EspNowExchange.cpp  EspNowExchange.h
exchange/src/exchange/i2c/: I2cDevice.h  I2cExchange.cpp  I2cExchange.h  I2cSlaveDevice.h
exchange/src/exchange/spi/: SpiExchange.cpp  SpiExchange.h  SpiMasterDevice.cpp  SpiMasterDevice.h  SpiSlaveDevice.cpp  SpiSlaveDevice.h
exchange/src/exchange/uart/: UartDevice.cpp  UartDevice.h  UartExchange.cpp  UartExchange.h
extra-linux/: CMakeLists.txt  Kconfig  idf_component.yml
extra-linux/src/: ExtraLinuxConfig.h  HidGamepad.cpp  HidGamepad.h  HidGamepadProperties.cpp  HidGamepadProperties.h  StringUtils.cpp  StringUtils.h
(+12 files in other folders)
